bk_ida/gccida/c1/visualize_scheduled_insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visualize_scheduled_insns/src/sched-vis.c:1375:30: error: use of undeclared identifier 'unk_6D3EF7'
sprintf( &v6[v7], " %-33s", &unk_6D3EF7); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visualize_scheduled_insns/src/obj/sched-vis.o] Error 1
